halfway-done kdtree refinements