@@ -4,6 +4,8 @@ import kdtree.kdGetter;
 import kdtree.kdTree;
 
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertTrue;
+
 import org.junit.Test;
 
 import java.util.ArrayList;
@@ -14,7 +16,7 @@ import java.util.Random;
 public class kdTreeTest {
 
     //global kdTree used in some tests, tests reloading data
-    kdTree gkd = new kdTree();
+    kdTree<Star> gkd = new kdTree<Star>();
     Star origin = new Star(0, "OriginStar", 0, 0, 0);
 
     List<kdGetter<Star>> starGetters = List.of(
@@ -49,6 +51,29 @@ public class kdTreeTest {
         return starList;
     }
 
+    private boolean testListTie(List<Star> expected, List<Star> actual, List<Star> swappables) {
+        if (expected.equals(actual)) {
+            return true;
+        }
+        if (expected.size() != actual.size()) {
+            return false;
+        }
+        for (int i = 0; i < expected.size(); i++) {
+            if (expected.get(i).equals(actual.get(i))) {
+                continue;
+            } else {
+               for (Star s : swappables) {
+                   if (actual.get(i).equals(s)) {
+                       continue;
+                   }
+               }
+               //Here means they're not equal
+                return false;
+            }
+        }
+        return true;
+    }
+
 
     @Test
     public void testBasic() {
@@ -68,88 +93,58 @@ public class kdTreeTest {
     Star star7 = new Star(7, "seventh", 0, 0, 14);
     Star star8 = new Star(8, "eight", 0, 0, 9);
     Star star9 = new Star(9, "nine", 0, 0, 9);
-    Star star10 = new Star(10, "nine", 1, 0, 1);
+    Star star10 = new Star(10, "nine", 2, 0, 1);
 
     ArrayList<Star> tenStarList = new ArrayList<>(
         Arrays.asList(star1, star2, star3, star4, star5, star6, star7, star8, star9, star10));
 
     @Test
-    public void straightforward() {
+    public void basic() {
         //loading tenStarList and starGetters to our global kdTree
         gkd.loadData(tenStarList, starGetters);
-        assertEquals(gkd.nearestNeighbors(2, star2), Arrays.asList(star2, star1));
+        assertEquals(Arrays.asList(star2, star1), gkd.nearestNeighbors(2, star2));
     }
 
-    /*@Test
+    @Test
+    public void basic2() {
+        //loading tenStarList and starGetters to our global kdTree
+        gkd.loadData(tenStarList, starGetters);
+        //equal distance between >n stars
+        assertEquals(Arrays.asList(star4, star3), gkd.nearestNeighbors(2, star4));
+    }
+
+    @Test
     public void equalDistance() {
         //loading tenStarList and starGetters to our global kdTree
         gkd.loadData(tenStarList, starGetters);
         //equal distance between n stars
-        assertEquals(gkd.nearestNeighbors(2, star5), Arrays.asList(star5, star4));
+        assertTrue(testListTie(gkd.nearestNeighbors(2, star5), Arrays.asList(star5, star4), List.of(star4, star6, star7)));
     }
 
     @Test
-    public void equalDistance2() {
-        //loading tenStarList and starGetters to our global kdTree
-        gkd.loadData(tenStarList, starGetters);
-        //equal distance between >n stars
-        assertEquals(gkd.nearestNeighbors(2, star4), Arrays.asList(star4, star3));
-    }
-
-     */
-
-    /*@Test
     public void tooLargeN() {
         //loading tenStarList and starGetters to our global kdTree
         gkd.loadData(tenStarList, starGetters);
         //fewer than 'n' nodes in the tree --> return all nodes (including the one inputted)
-        assertEquals(gkd.nearestNeighbors(500, star4),
-            Arrays.asList(star1, star2, star3, star4, star5, star6, star7, star8, star9));
+        assertEquals(Arrays.asList(star1, star2, star3, star4, star5, star6, star7, star8, star9),
+            gkd.nearestNeighbors(500, star4));
     }
-
-     */
 
     @Test
     public void zeroNodes() {
         //loading tenStarList and starGetters to our global kdTree
         gkd.loadData(tenStarList, starGetters);
         //0 nodes
-        assertEquals(gkd.nearestNeighborsExcludingCenter(0, star4), Arrays.asList());
+        assertEquals(gkd.nearestNeighbors(0, star4), Arrays.asList());
     }
 
-    /*@Test
+    @Test
     public void nonexistentCoords() {
         //loading tenStarList and starGetters to our global kdTree
         gkd.loadData(tenStarList, starGetters);
         //non-existent coordinates -->
         assertEquals(
-            gkd.nearestNeighborsExcludingCenter(2, new Star(11, "not in tree", 0, 0, 1000)),
-            Arrays.asList(star7, star6));
-    }
-     */
-
-    public void testNearestNeighborsExcludingCenter() {
-        gkd.loadData(tenStarList, starGetters);
-
-        //I want to search around 50,50,50
-        gkd.nearestNeighbors(4, new Star(0 ,"", 50, 50, 50));
-        //straightforward case
-        assertEquals(gkd.nearestNeighborsExcludingCenter(2, star2), Arrays.asList(star1, star3));
-
-        //equal distance between n stars
-        assertEquals(gkd.nearestNeighborsExcludingCenter(2, star5),Arrays.asList(star4, star6));
-
-        //equal distance between >n stars
-        assertEquals(gkd.nearestNeighborsExcludingCenter(2, star4), Arrays.asList(star3, star8));
-
-        //fewer than 'n' nodes in the tree --> return all nodes (except for the one inputted)
-        assertEquals(gkd.nearestNeighborsExcludingCenter(500, star4), Arrays.asList(star1, star2, star3, star5, star6, star7, star8, star9));
-
-        //0 nodes
-        assertEquals(gkd.nearestNeighborsExcludingCenter(0, star4), Arrays.asList());
-
-        //non-existent coordinates -->
-        assertEquals(gkd.nearestNeighborsExcludingCenter(2, new Star(10, "not in tree", 1, 1, 1)), Arrays.asList(star10));
-
+            Arrays.asList(star7, star6),
+            gkd.nearestNeighbors(2, new Star(11, "not in tree", 0, 0, 1000)));
     }
 }
